<resources>
    <!-- Session -->
    <string name="session_label">Sessions</string>
    <!-- Speaker -->
    <string name="speaker_label">Speaker</string>

    <!-- Material -->
    <string name="material_label">Material</string>
    <!-- Announce -->
    <string name="announce_label">Announcements</string>
    <!-- About -->
    <string name="about_label">About</string>
    <!-- Sponsor -->
    <string name="sponsor_label">Sponsors</string>
    <!-- FloorMap -->
    <string name="map_label">Floormap</string>
    <!-- Survey -->
    <string name="survey_label">Entire survey</string>
    <string name="ellipsis_label">more</string>
    <string name="session_survey_label">Session survey</string>
    <string name="wifi_label">WiFi</string>

    <!-- Search -->
    <string name="search_label" translatable="false">Search</string>
    <!-- Contributor -->
    <string name="contributor_label" translatable="false">Contributors</string>
    <!-- Setting -->
    <string name="setting_label" translatable="false">Settings</string>
    <!-- Staff Search -->
    <string name="staffs_label">Committee Members</string>
    <!-- Licenses -->
    <string name="licenses_label">License</string>
    <!-- Widgets -->
    <string name="description_filter_applied">%1$s filter applied</string>
    <string name="description_filter_not_applied">%1$s filter not applied</string>
    <!-- Notification -->
    <string name="notification_title_session_start">Notice of favorite session start</string>
    <string name="notification_message_session_title">%1$s will start soon</string>
    <string name="notification_message_session_start_time">%1$s to %2$s @ %3$s</string>
    <string name="notification_channel_name_start_favorite_session">start favorite session</string>
    <string name="notification_channel_name_announcement">Announcement</string>
    <!-- Tabular Form -->
    <string name="tabular_form_label">Timetable</string>
    <!-- Preference -->
    <string name="theme_label" translatable="false">Theme</string>
    <string name="dark_theme_label" translatable="false">Dark theme</string>
    <string name="pref_theme_value_default" translatable="false">default</string>
    <string name="pref_theme_value_battery" translatable="false">battery</string>
    <string name="pref_theme_value_light" translatable="false">light</string>
    <string name="pref_theme_value_dark" translatable="false">dark</string>
    <string name="pref_theme_entry_default">System default</string>
    <string name="pref_theme_entry_battery">When battery saver is on</string>
    <string name="pref_theme_entry_light">Light</string>
    <string name="pref_theme_entry_dark">Dark</string>
    <!-- override in v29 -->
    <string name="pref_theme_default" translatable="false">@string/pref_theme_value_battery</string>
    <string-array name="pref_theme_entries">
        <item>@string/pref_theme_entry_light</item>
        <item>@string/pref_theme_entry_dark</item>
        <item>@string/pref_theme_entry_battery</item>
    </string-array>
    <string-array name="pref_theme_entry_values">
        <item>@string/pref_theme_value_light</item>
        <item>@string/pref_theme_value_dark</item>
        <item>@string/pref_theme_value_battery</item>
    </string-array>

    <string name="error_network" translatable="false">A network error has occurred.Please try again.</string>
    <string name="error_server" translatable="false">A server error has occurred.Please try again.</string>
    <string name="error_unknown" translatable="false">An unknown error has occurred.Please try again.</string>
    <!-- Shortcut -->
    <string name="floor_map_shortcut_short_label1">Floormap</string>
    <string name="my_plan_shortcut_short_label1">MY PLAN</string>
    <string name="error_no_calendar_integration">No Calendar application was found.</string>
</resources>
