<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/session"
        android:checkableBehavior="single"
        >
        <item
            android:id="@id/main"
            android:icon="@drawable/ic_event_24px"
            android:title="@string/session_label"
            />
    </group>
    <group
        android:id="@+id/info"
        android:checkableBehavior="single"
        >
        <item
            android:id="@id/about"
            android:icon="@drawable/ic_android_black_24dp"
            android:title="@string/about_label"
            />
        <item
            android:id="@id/announcement"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/announce_label"
            />
        <item
            android:id="@id/floormap"
            android:icon="@drawable/ic_place_24px"
            android:title="@string/map_label"
            />
    </group>
    <group
        android:id="@+id/other"
        android:checkableBehavior="single"
        >
        <item
            android:id="@id/sponsors"
            android:icon="@drawable/ic_business_black_24dp"
            android:title="@string/sponsor_label"
            />
        <item
            android:id="@id/contributor"
            android:icon="@drawable/ic_group_24px"
            android:title="@string/contributor_label"
            />
        <item
            android:id="@id/setting"
            android:icon="@drawable/ic_settings_24px"
            android:title="@string/setting_label"
            />
        <item
            android:id="@+id/entire_survey"
            android:icon="@drawable/ic_feedback_black_24dp"
            android:title="@string/survey_label"
            />
    </group>
</menu>
