<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:startDestination="@id/main"
    >
    <fragment
        android:id="@+id/main"
        android:name="io.github.droidkaigi.confsched2020.session.ui.MainSessionsFragment"
        android:label="@string/session_label"
        >
        <action
            android:id="@+id/action_session_to_session_detail"
            app:destination="@id/session_detail"
            />
        <action
            android:id="@+id/action_session_to_speaker"
            app:destination="@id/speaker"
            />
        <action
            android:id="@+id/action_session_to_search_sessions"
            app:destination="@id/search_sessions"
            />
    </fragment>
    <fragment
        android:id="@+id/sessions"
        android:name="io.github.droidkaigi.confsched2020.session.ui.SessionsFragment"
        android:label="@string/session_label"
        >
        <argument
            android:name="tabIndex"
            app:argType="integer"
            />
    </fragment>
    <fragment
        android:id="@+id/search_sessions"
        android:name="io.github.droidkaigi.confsched2020.session.ui.SearchSessionsFragment"
        android:label="@string/search_label"
        >
        <action
            android:id="@+id/action_session_to_session_detail"
            app:destination="@id/session_detail"
            />
        <action
            android:id="@+id/action_session_to_speaker"
            app:destination="@id/speaker"
            />
    </fragment>
    <fragment
        android:id="@+id/bottom_session_day"
        android:name="io.github.droidkaigi.confsched2019.session.ui.BottomSheetDaySessionsFragment"
        android:label="@string/session_label"
        >
        <argument
            android:name="day"
            app:argType="integer"
            />
    </fragment>
    <fragment
        android:id="@+id/bottom_session_favorite"
        android:name="io.github.droidkaigi.confsched2019.session.ui.BottomSheetFavoriteSessionsFragment"
        android:label="@string/session_label"
        />
    <fragment
        android:id="@+id/session_detail"
        android:name="io.github.droidkaigi.confsched2020.session.ui.SessionDetailFragment"
        android:label="@string/session_label"
        >
        <argument
            android:name="sessionId"
            app:argType="io.github.droidkaigi.confsched2020.model.SessionId"
            />
        <action
            android:id="@+id/action_session_to_speaker"
            app:destination="@id/speaker"
            />
        <action
            android:id="@+id/action_session_to_survey"
            app:destination="@id/session_survey"
            />
    </fragment>
    <fragment
        android:id="@+id/speaker"
        android:name="io.github.droidkaigi.confsched2020.session.ui.SpeakerFragment"
        android:label="@string/speaker_label"
        >
        <argument
            android:name="speakerId"
            app:argType="io.github.droidkaigi.confsched2020.model.SpeakerId"
            />

        <action
            android:id="@+id/action_speaker_to_session_detail"
            app:destination="@id/session_detail"
            />
    </fragment>
    <fragment
        android:id="@+id/staffs"
        android:name="io.github.droidkaigi.confsched2020.staff.ui.StaffsFragment"
        android:label="@string/staffs_label"
        />
    <fragment
        android:id="@+id/sponsors"
        android:name="io.github.droidkaigi.confsched2020.sponsor.ui.SponsorsFragment"
        android:label="@string/sponsor_label"
        />
    <fragment
        android:id="@+id/announcement"
        android:name="io.github.droidkaigi.confsched2020.announcement.ui.AnnouncementFragment"
        android:label="@string/announce_label"
        />
    <fragment
        android:id="@+id/about"
        android:name="io.github.droidkaigi.confsched2020.about.ui.AboutFragment"
        android:label="@string/about_label"
        />
    <fragment
        android:id="@+id/floormap"
        android:name="io.github.droidkaigi.confsched2020.floormap.ui.FloorMapFragment"
        android:label="@string/map_label"
        />
    <fragment
        android:id="@+id/session_survey"
        android:name="io.github.droidkaigi.confsched2020.session_survey.ui.SessionSurveyFragment"
        android:label="@string/session_survey_label"
        >
        <argument
            android:name="sessionId"
            app:argType="io.github.droidkaigi.confsched2020.model.SessionId"
            />
    </fragment>
    <fragment
        android:id="@+id/setting"
        android:name="io.github.droidkaigi.confsched2020.preference.ui.PreferencesFragment"
        android:label="@string/setting_label"
        />
</navigation>
